2012-09-23 mosu
New 1.4.0 version:
    - Add new elements CueDuration, CueRelativePosition, TimecodeScaleDenominator
    - Make TrackTimecodeScale writing impossible
    - This release is not binary compatible to 1.4.0 due to the dependancy on libEBML 1.3.0 which is not
      binary compatible to its predecessor.

2011-09-23 robux4/mosu
New 1.3.0 version:
    - initialize all data members
    - The KaxCodeVersion variable now resides in the library instead of being declared static in the header file.
    - make KaxChapterSegmentEditionUID an unsigned integer to match the KaxChapterEditionUID it's supposed to target
    - This release is not binary compatible to 1.2.x.

2011-06-26 robux4/mosu
New 1.2.0 version:
    - skip data from KaxBlockVirtual as it should not be used
    - use semantic generated from the specs so there is no more possible mismatch

2011-02-02 impulze
    * trunk/libmatroska/test/test9.cpp
    - also remove no longer needed tests for old/outdated/previous tag system

2011-01-30 robux4/mosu
New 1.1.0 version:
    - give access to the SetParent to KaxSimpleBlock as well
    - change the placement of a MATROSKA_DLL_API so that it actually works
    - remove all references to the old/outdated/previous tag system
    - add the possibility for a DataBuffer class to use its own internal memory
    - KaxCues::AddBlockGroup() was removed as it's broken beyond repair
    - add KaxTrackOperation and related elements for combined stereo/3D tracks or joined virtual tracks
    - fix a memory leak in KaxReferenceBlock when an internal KaxBlockBlob was created
    - Increased library .so name due to binary incompatible changes in libebml

2010-06-04 robux4/mosu
New 1.0.0 version:
    - rename the library .so name as it's backward incompatible

2010-04-30 robux4/mosu
New 0.9.0 version:
    - fix a memory freeing issue in KaxBlock
    - use the macros from the new libebml 0.8.0 to simplify the element definitions and avoid possible typo bugs